# untitled-aruco-project

./: .gitignore  LICENSE  README.md  pyproject.toml
src/untitled-aruco-package/: example.py  untitled_core.py  untitled_utils.py
src/untitled_aruco_package/: example.py  untitled_core.py
tests/: README.md  calibrate_a_camera.py  detect_markers.py
tests/calib/: blender-camera-calib.json
tests/test-app/: README.md
